# VideoCreator_Linux

./: .gitignore  CMakeLists.txt  Note.md  README.md  test_config.json  videocreator_dev_log.md
src/: VideoCreatorAPI.cpp  VideoCreatorAPI.h  main.cpp
src/decoder/: AudioDecoder.cpp  AudioDecoder.h  FrameScaler.h  ImageDecoder.cpp  ImageDecoder.h  VideoDecoder.cpp  VideoDecoder.h  VideoLikeDecoderCore.h
src/engine/: RenderEngine.cpp  RenderEngine.h
src/ffmpeg_utils/: AvCodecContextWrapper.h  AvFormatContextWrapper.h  AvFrameWrapper.h  AvPacketWrapper.h  FFmpegHeaders.h
src/filter/: EffectProcessor.cpp  EffectProcessor.h
src/model/: ConfigLoader.cpp  ConfigLoader.h  ProjectConfig.h
